# lego-agent

./: .gitignore  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  package-lock.json  package.json  playwright.config.ts  start-services.ps1  test_controller.py  test_flow  test_observer.py  test_planner.py  test_s0_orchestrator.py  test_s1_observer.py  test_s2_planner.py  test_s3_controller.py  test_s4_judge.py  test_shared.py  upload.py
.github/: copilot-instructions.md
api/: connection.py  main.py  requirements.txt  shared.py  test_multiple_agent.py
bicep/: README.md  (+4 more)
lego-robot-agent/: .env  .env.example  AZURE_SETUP.md  QUICK_START.md  README.md  TESTING.md  TEST_RESULTS.md  TEST_SETUP_SUMMARY.md  pyproject.toml  run_tests.py
lego-robot-agent/agents/: README.md  controller.yaml  judger.yaml  observer.yaml  orchestrator.yaml  planner.yaml
lego-robot-agent/src/lego_robot_agent/: __init__.py  agent.py  context.py  models.py  shared.py
lego-robot-agent/src/lego_robot_agent/agents/: __init__.py  controller.py  judger.py  observer.py  orchestrator.py  planner.py
lego-robot-agent/src/lego_robot_agent/detection/: __init__.py  detector.py
lego-robot-agent/src/lego_robot_agent/prompts/: README.md  controller.yaml  judger.yaml  planner.yaml
lego-robot-agent/src/lego_robot_agent/util/: paths.py  yaml_loader.py
lego-robot-agent/src/tests/: mcp_test_utils.py  test1_action.py  test2_yolo.py  test3_object_detection.py  test4_simple_sequential.py  test5_multiple_agent.py  test6_new_agent.py  test_agents_simple.py  test_foundry_agent.py  test_lego_robot_agent.py
(+209 files in other folders)
