[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-robot-agent"
version = "0.1.0"
description = "LEGO Robot Agent - Multi-agent orchestration for LEGO robot control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LEGO Agent Team"}
]
keywords = ["lego", "robot", "agent", "ai", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agent-framework",
    "agent-framework-declarative",
    "azure-identity>=1.15.0",
    "azure-ai-projects>=1.0.0",
    "azure-storage-blob>=12.0.0",
    "openai>=1.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "mcp",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
